--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ django-cors-headers==4.7.0
 django-extensions==3.2.3
 django-filter==25.1
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.5.1
 drf-spectacular==0.28.0
 exceptiongroup==1.2.2; python_version < "3.11"
 executing==2.2.0
@@ -41,8 +42,6 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
-mysqlclient==2.2.7
-netifaces==0.11.0
 nodeenv==1.9.1
 packaging==24.1
 parso==0.8.4
